--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+== 2.2.8 Jun 14, 2010
+* Fix html for <li> marking it as html_safe when using rails_xss plugin
+
 == 2.2.7 Jun 12, 2010
 * Fix generated html marking it as html_safe when using rails_xss plugin
 
